kubernetes/apps/selfhosted/vikunja/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vikunja
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vikunja
  egress:
    # postgres
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # Authentik (for SSO)
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
